--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/system": "^5.10.6",
     "@mui/utils": "^5.10.6",
     "is-mobile": "^3.1.1",
+    "mui": "^0.0.1",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
