--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-helmet-async": "^1.3.0",
     "react-hotkeys-hook": "^3.4.7",
     "react-router-dom": "^6.4.1",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
