--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "https-localhost": "^4.7.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "postcss": "^8.4.23",
     "prettier": "2.7.1",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.8.3",
     "vite": "^3.1.3",
     "vite-plugin-pwa": "^0.13.1"
