--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "https-preview": "serve dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tailwind-build": "postcss src/styles.css -o dist/styles.css"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
