--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preview": "vite preview",
     "https-preview": "serve dist",
     "prepare": "husky install",
-    "tailwind-build": "postcss src/styles.css -o src/main.css"
+    "tailwind-build": "tailwindcss -i ./src/input.css -o ./src/main.css --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
