working on the product page

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "recoil": "^0.7.5",
     "tailwind": "^4.0.0",
     "typeface-dm-sans": "^1.1.13",
+    "typeface-lato": "^1.1.13",
     "typeface-manrope": "^1.0.0",
     "typeface-nunito": "^1.1.13",
     "typeface-open-sans": "^1.1.13",
